--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "vue": "^2.5.16",
+    "vue-meditor": "^0.5.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
